@@ -35,8 +35,10 @@ gdm (2.16.4-2) UNRELEASED; urgency=low
     debhelper-ish.
     - Stop shipping *.a and *.la files for Gtk modules.
   * Pass --disable-scrollkeeper to configure.
+  * Factorize manpages generation.
+  * Rename various debian/* files to debian/gdm.*.
 
- -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 14:20:08 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 14:57:52 +0200
 
 gdm (2.16.4-1.1) unstable; urgency=low
 
